--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "fabric": "^5.3.0",
+    "fabric": "6.0.0-beta13",
     "lodash": "^4.17.21",
     "next": "13.5.4",
     "react": "^18",
@@ -20,7 +20,6 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/fabric": "^5.3.4",
     "@types/lodash": "^4.14.199",
     "@types/node": "^20",
     "@types/react": "^18",
